# CVlization

./: .dockerignore  .gitignore  .pylintrc  AI.md  CONTRIBUTING.md  Dockerfile  Dockerfile.diffuser-gpu  Dockerfile.torch-gpu  LICENSE  LICENSE.md  PUBLISHING.md  README.md  TODO.md  agent_plan.md  analytical_plan.md  conda_env.yml  docker-compose.yml  example.yaml.template  examples_reorg_plan.md  granite_test.md  human_image_output.json  joycaption.txt  maintain_oct17.md  pyproject.toml  requirements.txt  setup.py  test_sagemaker_runner.py
examples/agentic/formal/nanoproof/nanoproof_repo/: .gitignore  LICENSE  README.md  pseudocode.py  pyproject.toml
examples/agentic/formal/nanoproof/nanoproof_repo/nanoproof/: adamw.py  checkpoints.py  common.py  configurator.py  core.py  engine.py  experience_collection.py  loss_eval.py  midtrain.py  model.py  muon.py  pretrain.py  report.py  rl.py  search.py  sft.py  tokenizer.py
examples/agentic/formal/nanoproof/nanoproof_repo/nanoproof/data/: leangithub_urls.txt  leangithubraw.py  leantree.py  leantree_dataloader.py  leanworkbook.py  minif2f.py  nemotron.py  nemotron_dataloader.py  numinamath.py  others.md
examples/agentic/formal/nanoproof/nanoproof_repo/scripts/: inspect_parquet.py  interact.py  policy_eval.py  prover_eval.py  tok_eval.py  tok_show.py  tok_train.py
examples/agentic/formal/nanoproof/nanoproof_repo/tests/: test_network.py
examples/generative/video_generation/turbodiffusion/: .gitignore  Dockerfile  README.md  build.sh  example.yaml  predict.py  predict.sh  pyproject.toml  requirements.txt  setup.py  test.sh
examples/generative/video_generation/turbodiffusion/SLA/: __init__.py  core.py  kernel.py  utils.py
examples/generative/video_generation/turbodiffusion/imaginaire/: config.py  model.py  trainer.py
examples/generative/video_generation/turbodiffusion/imaginaire/callbacks/: every_n.py  low_precision.py  manual_gc.py
examples/generative/video_generation/turbodiffusion/imaginaire/lazy_config/: __init__.py  file_io.py  instantiate.py  lazy.py  omegaconf_patch.py  registry.py
examples/generative/video_generation/turbodiffusion/imaginaire/utils/: callback.py  checkpointer.py  config_helper.py  device.py  distributed.py  ema.py  fused_adam.py  graph.py  io.py  log.py  misc.py  parallel_state_helper.py  parallelism.py  profiling.py  validator.py  wandb_util.py
examples/generative/video_generation/turbodiffusion/imaginaire/utils/easy_io/: easy_io.py  file_client.py
examples/generative/video_generation/turbodiffusion/imaginaire/utils/easy_io/backends/: __init__.py  base_backend.py  http_backend.py  local_backend.py  registry_utils.py
examples/generative/video_generation/turbodiffusion/imaginaire/utils/easy_io/handlers/: __init__.py  base.py  byte_handler.py  csv_handler.py  gzip_handler.py  imageio_video_handler.py  json_handler.py  jsonl_handler.py  np_handler.py  pandas_handler.py  pickle_handler.py  pil_handler.py  registry_utils.py  tarfile_handler.py  torch_handler.py  torchjit_handler.py  txt_handler.py  yaml_handler.py
examples/generative/video_generation/turbodiffusion/inference/: modify_model.py  wan2.1_t2v_infer.py  wan2.2_i2v_infer.py
examples/generative/video_generation/turbodiffusion/ops/: __init__.py  bindings.cpp  core.py
examples/generative/video_generation/turbodiffusion/ops/common/: common.hpp  launch.hpp  load.hpp  store.hpp
examples/generative/video_generation/turbodiffusion/ops/gemm/: gemm.cu  kernel.hpp  launch.hpp  utils.hpp
examples/generative/video_generation/turbodiffusion/ops/norm/: layernorm.cu  layernorm.hpp  rmsnorm.cu  rmsnorm.hpp
examples/generative/video_generation/turbodiffusion/ops/quant/: quant.cu  quant.hpp
examples/generative/video_generation/turbodiffusion/rcm/: conditioner.py
examples/generative/video_generation/turbodiffusion/rcm/callbacks/: compile_tokenizer.py  dataloading_monitor.py  device_monitor.py  every_n_draw_distill.py  every_n_draw_sla.py  grad_clip.py  heart_beat.py  iter_speed.py  wandb_log.py
examples/generative/video_generation/turbodiffusion/rcm/checkpointers/: dcp.py  dcp_distill.py
examples/generative/video_generation/turbodiffusion/rcm/configs/: registry_distill.py  registry_sla.py
examples/generative/video_generation/turbodiffusion/rcm/configs/defaults/: callbacks.py  checkpoint.py  ckpt_type.py  conditioner.py  dataloader.py  ema.py  model.py  net.py  optimizer.py  scheduler.py  tokenizer.py  trainer.py
examples/generative/video_generation/turbodiffusion/rcm/datasets/: build_synthetic_dataset.py  merge_tar_shards.py  utils.py  visualize_tar.py  webdataset.py
examples/generative/video_generation/turbodiffusion/rcm/models/: t2v_model_distill_rcm.py  t2v_model_sla.py
examples/generative/video_generation/turbodiffusion/rcm/modules/: denoiser_scaling.py
examples/generative/video_generation/turbodiffusion/rcm/networks/: wan2pt1.py  wan2pt1_jvp.py  wan2pt1_jvp_test.py  wan2pt2.py
examples/generative/video_generation/turbodiffusion/rcm/samplers/: euler.py  unipc.py
examples/generative/video_generation/turbodiffusion/rcm/tokenizers/: interface.py  wan2pt1.py
examples/generative/video_generation/turbodiffusion/rcm/trainers/: trainer_distillation.py
examples/generative/video_generation/turbodiffusion/rcm/utils/: a2a_cp.py  attention.py  checkpointer.py  context_parallel.py  dtensor_helper.py  flash_attention_jvp_triton.py  fsdp_helper.py  fused_adam_dtensor.py  jvp_helper.py  lognormal.py  lr_scheduler.py  misc.py  model_utils.py  optim_instantiate_dtensor.py  selective_activation_checkpoint.py  torch_future.py  umt5.py
examples/generative/video_generation/video_enhancement/: .gitignore  Dockerfile  build.sh  config.py  dataset.py  example.yaml  infer.py  inference_video.py  losses.py  make_sample.py  model.py  model_elir.py  model_lama.py  notes.md  pexels_animals.py  pexels_sweep.sh  predict.py  predict.sh  prepare_data.sh  pretrained.py  pyproject.toml  requirements.txt  run.sh  sweep.sh  tensorboard.sh  train.py  train.sh  upload_to_hf.py  video_enhancement.py  vimeo_septuplet.py  vimeo_sweep.sh  visual_artifacts.py
(+4272 files in other folders)
