[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvl"
version = "0.1.0"
description = "CVL - Command-line tool for discovering and running CVlization ML examples"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CVlization Contributors"}
]
keywords = ["machine-learning", "computer-vision", "examples", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cvl = "cvl.__main__:main"

[project.urls]
Homepage = "https://github.com/kungfuai/CVlization"
Repository = "https://github.com/kungfuai/CVlization"
Documentation = "https://github.com/kungfuai/CVlization"
Issues = "https://github.com/kungfuai/CVlization/issues"

[tool.setuptools]
packages = ["cvl", "cvl.commands", "cvl.core"]
