[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-enhancement"
version = "0.1.0"
description = "Video artifact/watermark removal using deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CVlization"}
]
keywords = ["video", "enhancement", "watermark", "removal", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "opencv-python",
    "pillow",
    "huggingface_hub",
    "tqdm",
]

[project.optional-dependencies]
train = [
    "lpips",
    "tensorboard",
]

[project.scripts]
video-enhance = "inference_video:main"

[project.urls]
Homepage = "https://github.com/kungfuai/CVlization"
Repository = "https://github.com/kungfuai/CVlization"

[tool.setuptools]
py-modules = ["model", "model_elir", "model_lama", "inference_video", "visual_artifacts", "predict", "infer", "video_enhancement"]
